# python-backend-course

./: LICENSE  README.md  client.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py
definitions/: service.proto
definitions/builds/: service_pb2.py  service_pb2_grpc.py
src/: app.py  db.py  main.py  model.py  routers.py  worker.py
test/: test_book.py  test_cancel.py  test_check.py  test_integration.py  test_server.py
