[tool.poetry]
name = "python-backend-course"
version = "0.1.0"
description = ""
authors = ["Alexey Trilis <aatrilis2000@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "src/"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
pytest = "^7.1.3"
pydantic = "^1.10.2"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.23"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
